# HardCap

./: .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  SUPPORT.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md  RELEASE.md  USER_GUIDE.md
resources/: HardCap.rc  app.manifest  resource.h
src/app/: main.cpp
src/core/: rule.cpp  rule.h  rule_repository.cpp  rule_repository.h
src/engine/: process_groups.cpp  process_groups.h  rule_engine.cpp  rule_engine.h
src/platform/: job_controller.cpp  job_controller.h  process_monitor.cpp  process_monitor.h  unelevated_launcher.cpp  unelevated_launcher.h  win32_handle.h
src/ui/: main_window.cpp  main_window.h  tray_controller.cpp  tray_controller.h
tests/: test_helper.cpp  test_main.cpp  ui_smoke_main.cpp
tools/: GenerateIcon.ps1
